<resources>
    <string name="word_of_the_day_available">Word of the day available.</string>
    <string name="user_email">Email/Username</string>
    <string name="user_password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="private_stuffkie">Private stuffkie.</string>
    <string name="untitled">Untitled</string>
    <string name="attention">Attention</string>
    <string name="author">Author:</string>
    <string name="feature_unavailable">Feature not available yet</string>
    <string name="feature_coming_soon">You’ll be able to access it very soon.</string>
    <string name="creation">Creation:</string>
    <string name="last_update">Last update:</string>
    <string name="worldkie">Worldkie:</string>
    <string name="del_notekie">Do you want to delete the note? You won’t be able to recover it.</string>
    <string name="del_characterkie">Do you want to delete the character? You won’t be able to recover it.</string>
    <string name="del_worldkie">Do you want to delete the location? You won’t be able to recover it.</string>
    <string name="del_stuffkie">Do you want to delete the item? You won’t be able to recover it.</string>
    <string name="wait_new_info">You\'ll be able to see more information soon.</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_repeat_password">Repeat new password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="challenges">Challenges</string>
    <string name="numberphone">Number phone</string>
    <string name="pronouns">Pronouns</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="worlds">Worlds</string>
    <string name="writtingPlanet">Writting planet</string>
    <string name="incorrectLogin">Incorrect login</string>
    <string name="email">Email</string>
    <string name="at_symbol">\@</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="ago">ago</string>
    <string name="it_was_a">It was a</string>
    <string name="second">second</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="twentyone">21</string>
    <string name="twentytwo">22</string>
    <string name="twentythree">23</string>
    <string name="twentyfour">24</string>
    <string name="twentyfive">25</string>
    <string name="twentysix">26</string>
    <string name="twentyseven">27</string>
    <string name="twentyeight">28</string>
    <string name="twentynine">29</string>
    <string name="thirty">30</string>
    <string name="thirtyone">31</string>
    <string name="draft">Draft</string>
    <string name="mm">MM</string>
    <string name="mm_yy">MM/YY</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="yyyy">YYYY</string>
    <string name="unknown_fem">Unknown</string>
    <string name="unknown_masc">Unknown</string>
    <string name="chooseIconkie">Iconkie</string>
    <string name="chooseGallery">Gallery</string>
    <string name="emailUsername">Email/Username</string>
    <string name="numberErrorTextField">Can not contain numbers</string>
    <string name="nameErrorEmpty">Name can not be empty</string>
    <string name="surnameErrorEmpty">Surname can not be empty</string>
    <string name="pronounsErrorEmpty">Pronouns can not be empty</string>
    <string name="birthdayErrorEmpty">Birthday can not be empty</string>
    <string name="userErrorEmpty">Username can not be empty</string>
    <string name="userErrorExists">Username already exists</string>
    <string name="emailErrorEmpty">Email can not be empty</string>
    <string name="telephoneErrorEmpty">Telephone can not be empty</string>
    <string name="emailErrorFormat">Email format no valid</string>
    <string name="emailExists">Email already exists</string>
    <string name="passwordErrorEmpty">Password can not be empty</string>
    <string name="passwordTooShort">Password must contains at least 8 characters</string>
    <string name="passwordErrorSpecialChar">Password must contain at least one special characters</string>
    <string name="passwordErrorUppercase">Password must contain at least one uppercase letter</string>
    <string name="passwordErrorRepeatEmpty">Password can not be empty</string>
    <string name="passwordErrorRepeat">Passwords do not match</string>
    <string name="gender">Gender</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="app_name">buuktu</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_session">Logout</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="characterkies">Characterkies</string>
    <string name="worldkies">Worldkies</string>
    <string name="stuffkies">Stuffkies</string>
    <string name="userkies">Userkies</string>
    <string name="notikies">Notikies</string>
    <string name="notekies">Notekies</string>
    <string name="scenariokies">Scenariokies</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_fluid">Gender fluid</string>
    <string name="gender_nonbinary">Non-binary</string>
    <string name="gender_unknown">Unknown</string>
    <string name="other_masc">Other</string>
    <string name="other_fem">Other</string>
    <string name="worldkie_normal">Worldkie</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="stuffkie">Stuffkie</string>
    <string name="profile_other_subtitle">¿Qué estoy viendo?</string>
    <string name="profile_othegr_description">Bienvenido a tu perfil..Es importante que veas como lo ve el resto, ya que es tu pequeño escaparate. Se podria decir que lo estas viendo desde dentro, ya que te mostramos tambien tus creaciones ocultas con la intencion de que tengas otra manera de acceder a estas. /n/n Cada dia a medianoche obtendras elementos para inspirarte./n/nA partir de ahi, debes usar tu imaginacion, no hay reglas escritas, la unica es usar dichos elementos. Papel y boligrafo seran tus mejores aliados a la hora de intentar crear un mundo con ellos./n/nRecuerda tener cuidado con lo que pones en tu escaparate.</string>
    <string name="worldkie_description"> Un worldkie es un pequeño universo del que iras juntando pieza a pieza hasta crear la base de tu libro. Dentro de el tendras la informacion organizad.</string>
    <string name="characterkie_description">A character from your own literary universe.</string>
    <string name="stuffkie_description">A stuffkie from your own literary universe.</string>
    <string name="notekie_description">Te vas a llevar una decepcion, pero es una nota normal y corriente.</string>
    <string name="settings_description">Momento de descubrir america, ajustes es efectivamente donde hace ajustes.\n\nTu cuenta debe estar siempre perfecta, asi que haz todos los ajustes necesarios para ello.</string>
    <string name="search_description">Te voy a contar un secreto pero no se lo cuentes a nadie, aqui deberias poder buscar usuarios y elementos  por nombre pero aun no se puede.\n\nPD: Si quieres un tip, puedes verlos igualmente y acceder a ellos.</string>
    <string name="home_description">Bienvenido a la pantalla principal, si pulsas en el boton podras crear un nuevo Worldkie. Todos los que hayas creado se mostraran aqui.</string>
    <string name="notekies_subtitle">¿Qué es una notekie?</string>
    <string name="stuffkies_subtitle">What\'s a stuffkie?</string>
    <string name="worldkies_subtitle">What\'s a worldkie?</string>
    <string name="scenariokie">Scenariokie</string>
    <string name="scenariokies_subtitle">What\'s a scenariokie?</string>
    <string name="scenariokie_description">A place from your own literary universe.</string>
    <string name="characterkie">Characterkie</string>
    <string name="notekie">Notekie</string>
    <string name="notikie">Notikie</string>
    <string name="inspo_description">Here you can save all the ideas that come to your mind, as well as try to get new ones through our challenges.</string>
    <string name="notikies_subtitle">What\'s a notikie?</string>
    <string name="characterkies_subtitle">What\'s a characterkie?</string>
    <string name="inspo">Inspo</string>
    <string name="challenges_subtitle">What do they consist of?</string>
    <string name="profile_self_subtitle">Welcome to your profile.</string>
    <string name="profile_self_description"> It\'s important that you see how others view it, as it\'s your little showcase. You could say you\'re seeing it from the inside, since we also show you your hidden creations so that you have another way to access them.\n\nEvery day at midnight, you will get elements to inspire you.\n\nFrom there, you must use your imagination; there are no written rules, the only one is to use these elements. Paper and pen will be your best allies when trying to create a world with them.\n\nRemember to be careful with what you put in your showcase.</string>
    <string name="challenges_description"><![CDATA[
Every day at midnight, you will get elements to inspire you.

From there, you must use your imagination; there are no written rules, the only one is to use these elements. Paper and pen will be your best allies when trying to create a world with them.

Remember to activate notifications so you don\'t miss anything.
]]></string>
    <string name="notikies_description">It is a normal, ordinary notification.\n\nHere you will be able to see any type of notification you have activated with its respective information, including when it was sent.</string>
    <string name="write_here">Write here…</string>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>
</resources>