<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/twotone_houseboat_24"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/twotone_explore_24"
        android:title="@string/search" />

    <item
        android:id="@+id/inspo"
        android:enabled="true"
        android:icon="@drawable/twotone_bubble_chart_24"
        android:title="@string/inspo"
        android:visible="true" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/twotone_notifications_24"
        android:title="@string/notikies" />

    <item
        android:id="@+id/messages"
        android:icon="@drawable/twotone_message_24"
        android:title="@string/messages" />

</menu>