<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_month_one"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/one"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bt_day_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_month_six"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/six"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bt_day_seven"
                app:layout_constraintStart_toEndOf="@+id/bt_day_five"
                app:layout_constraintTop_toBottomOf="@+id/bt_day_two"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_month_four"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/four"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_day_three"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_month_nine"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/nine"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bt_day_ten"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_day_five"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_month_eight"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/eight"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_day_seven"
                app:layout_constraintTop_toBottomOf="@+id/bt_month_four"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_month_twelve"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/twelve"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bt_month_eleven"
                app:layout_constraintTop_toBottomOf="@+id/bt_month_eight"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_month_eleven"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/eleven"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bt_month_twelve"
                app:layout_constraintStart_toEndOf="@+id/bt_day_ten"
                app:layout_constraintTop_toBottomOf="@+id/bt_month_eight"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_day_ten"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/ten"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bt_month_eleven"
                app:layout_constraintStart_toEndOf="@+id/bt_month_nine"
                app:layout_constraintTop_toBottomOf="@+id/bt_month_six"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_day_seven"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/seven"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bt_month_eight"
                app:layout_constraintStart_toEndOf="@+id/bt_month_six"
                app:layout_constraintTop_toBottomOf="@+id/bt_day_three"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_day_five"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/five"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bt_month_six"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_month_one"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_day_three"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/three"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bt_month_four"
                app:layout_constraintStart_toEndOf="@+id/bt_day_two"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/bt_day_two"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="23dp"
                android:backgroundTint="#B39DDB"
                android:text="@string/two"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bt_day_three"
                app:layout_constraintStart_toEndOf="@+id/bt_month_one"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:strokeColor="#5D3131"
                app:strokeWidth="3dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mes"
                android:textColor="#B39DDB"
                android:textSize="34sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_save_birthday_characterkie" />

            <ImageButton
                android:id="@+id/bt_save_birthday_characterkie"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_save_24" />

            <ImageButton
                android:id="@+id/ib_back_day_dialog"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_arrow_circle_left_24" />

            <!-- Cambia el color del texto aquí -->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>