<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/bt_save_gender_characterkie"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_save_24" />

            <RadioButton
                android:id="@+id/rb_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radiobutton_custom"
                android:tag="gender_male"
                android:text="@string/gender_male"
                app:layout_constraintEnd_toStartOf="@+id/rb_gender_female"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_save_gender_characterkie" />

            <RadioButton
                android:id="@+id/rb_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radiobutton_custom"
                android:tag="gender_female"
                android:text="@string/gender_female"
                app:layout_constraintEnd_toStartOf="@+id/rb_gender_fluid"
                app:layout_constraintStart_toEndOf="@+id/rb_gender_male"
                app:layout_constraintTop_toBottomOf="@+id/bt_save_gender_characterkie" />

            <RadioButton
                android:id="@+id/rb_gender_fluid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radiobutton_custom"
                android:tag="gender_fluid"
                android:text="@string/gender_fluid"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rb_gender_female"
                app:layout_constraintTop_toBottomOf="@+id/bt_save_gender_characterkie" />

            <RadioButton
                android:id="@+id/rb_gender_nonbinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/radiobutton_custom"
                android:tag="gender_nonbinary"
                android:text="@string/gender_nonbinary"
                app:layout_constraintEnd_toStartOf="@+id/rb_gender_unknown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rb_gender_male" />

            <RadioButton
                android:id="@+id/rb_gender_unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/radiobutton_custom"
                android:text="@string/unknown_masc"
                app:layout_constraintEnd_toStartOf="@+id/rb_other_gender_characterkie"
                app:layout_constraintStart_toEndOf="@+id/rb_gender_nonbinary"
                app:layout_constraintTop_toBottomOf="@+id/rb_gender_fluid" />

            <RadioButton
                android:id="@+id/rb_other_gender_characterkie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/radiobutton_custom"
                android:text="@string/other_masc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rb_gender_unknown"
                app:layout_constraintTop_toBottomOf="@+id/rb_gender_fluid" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_otherGendersCharacterkieFilled"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name"
                android:textAlignment="center"
                app:boxCornerRadiusBottomEnd="58dp"
                app:boxCornerRadiusBottomStart="58dp"
                app:boxCornerRadiusTopEnd="58dp"
                app:boxCornerRadiusTopStart="58dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rb_gender_nonbinary"
                app:startIconDrawable="@drawable/twotone_supervised_user_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_otherGendersCharacterkie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textAlignment="center"
                    android:textColorHint="@color/brownMaroon"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>